# ScoRHEgami

./: .gitignore  README.md  alembic.ini  launcher_cron.py  launcher_web.py  pyproject.toml  requirements.txt
ScoRHEgami/: baseball_reference.py  db.py
ScoRHEgami/common/: ctx.py  settings.py
app/: baseball_reference.py
app/common/: ctx.py  settings.py
app/cron/: __init__.py
app/web/: __init__.py  config.py  team.py
links/: 1901.txt  1902.txt  1903.txt  1904.txt  1905.txt  1906.txt  1907.txt  1908.txt  1909.txt  1910.txt  1911.txt  1912.txt  1913.txt  1914.txt  1915.txt  1916.txt  1917.txt  1918.txt  1919.txt  1920.txt  1921.txt  1922.txt  1923.txt  1924.txt  1925.txt  1926.txt  1927.txt  1928.txt  1929.txt  1930.txt  1931.txt  1932.txt  1933.txt  1934.txt  1935.txt  1936.txt  1937.txt  1938.txt  1939.txt  1940.txt  (+84 more)
migration/: env.py
migration/versions/: 20250202_ea5a863958b7_initial_db_setup.py  20250301_0e5641fb7e7e_add_indexes_to_game_box_score.py  20250317_519171304ae8_team_multiple_names.py  20250317_77b7ebadbc5a_add_scorhegami_game_table.py  20250319_70505e806ca6_db_setup.py  20250323_417788913996_balldontlie_id.py  20250324_9e68bae8e94f_add_baseball_reference_link.py  20250325_7ab65f4f065a_timezone_aware.py  20250325_7d5e98368207_add_game_balldontlie_id.py  20250325_f48f726c30cd_add_columns_to_game.py  20250326_5fd2a1509432_add_index_to_game_status.py  20250328_f477ce2d0caa_add_cursor_table.py  20250331_c7de74688edc_drop_scorhegami_game_table.py  20250401_804cfbd9fb20_add_created_updated_ts_to_all_tables.py  20250401_f62f6c41650b_add_tweet_table.py  20250426_75a3a103f168_add_game_date.py  (+3 more)
results/: 1901.txt  1902.txt  1903.txt  1904.txt  1905.txt  1906.txt  1907.txt  1908.txt  1909.txt  1910.txt  1911.txt  1912.txt  1913.txt  1914.txt  1915.txt  1916.txt  1917.txt  1918.txt  1919.txt  1920.txt  1921.txt  1922.txt  1923.txt  1924.txt  1925.txt  1926.txt  1927.txt  1928.txt  1929.txt  1930.txt  1931.txt  1932.txt  1933.txt  1934.txt  1935.txt  1936.txt  1937.txt  1938.txt  1939.txt  1940.txt  (+84 more)
scripts/: add_bref_url.py  add_games_to_db.py  baseball_reference.py  fix_start_time.py  print_links_of_season.py  record_games.py  save_all_links.py
templates/: game_list.html
(+23 files in other folders)
