[project]
name = "ScoRHEgami"
version = "0.1.0"
description = "ScoRHEgami project"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4==4.12.3",
    "requests==2.32.2",
    "lxml==5.3.0",
    "psycopg[binary]==3.2.3",
    "SQLAlchemy[asyncio]==2.0.36",
    "pydantic-settings==2.7.1",
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "fastapi[standard]==0.115.11",
    "balldontlie==0.1.6",
    "python-dateutil==2.9.0",
    "tweepy[async]==4.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
