[project]
name = "ScoRHEgami"
version = "0.1.0"
description = "ScoRHEgami project"
requires-python = ">=3.13"

dependencies = [
    "psycopg[binary]==3.3.3",
    "sqlalchemy[asyncio]==2.0.49",
    "pydantic-settings==2.14.0",
    "alembic==1.14.1",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "fastapi[standard]==0.136.1",
    "python-dateutil==2.9.0",
    "tweepy[async]==4.16.0",
    "sentry-sdk[fastapi]==2.58.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "mypy>=1.15.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
